# remotion-captions

./: .gitignore  README.md  SCRIPTS.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
public/: subtitles.srt  subtitles_en.srt  subtitles_sk.srt
scripts/whisper-project/: .gitignore  .ruff.toml  MIGRATION.md  Makefile  QUICKSTART.md  README.md  example_usage.py  generate_whisper_subtitles.py  main.py  pyproject.toml  subtitle_generator.py
scripts/whisper-project/whisper_subtitles/: __init__.py  cli.py  config.py  formatter.py  generator.py
src/: CaptionVideo.tsx  Root.tsx  loadSubtitles.ts
src/components/: SlovakCaption.tsx  WordByWordCaptions.tsx  index.ts
src/config/: captionStyles.ts  index.ts
src/hooks/: useSubtitles.ts
src/types/: index.ts  subtitles.ts  video.ts
src/utils/: srtParser.ts
